fixed calendar alignment

--- a/src/styles/components/datepicker.less
+++ b/src/styles/components/datepicker.less
@@ -203,7 +203,7 @@
     display: inline-block;
     content: attr(data-counter);
     position: relative;
-    left: 20px;
+    left: 0px;
     top: 50%;
     max-width: 50%;
     line-height: 18px;
